# mcp_tool_ocr

./: .gitignore  README.md  config.py  main.py  pyproject.toml  test.py
example_files/: test_docx.docx  test_xlsx.xlsx
tests/: test_mcp.py
